# grokomation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  cleanup_env.sh  cleanup_orphaned_worktrees.sh  prompt.md  pyproject.toml  setup_env.sh
.github/workflows/: docker-publish.yml  python-package.yml
src/grokomation/: __init__.py  config.py  database.py  main.py  opencode.py  processes.py
